examples/datalog/14_aggregations/22_count_with_filter.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_count_filter
Knowledge graph 'test_count_filter' created.
Switched to knowledge graph: test_count_filter
> .kg use test_count_filter
Switched to knowledge graph: test_count_filter
> +sales[(1, 100), (1, 200), (1, 50), (2, 300), (2, 400), (3, 150)].
Inserted 6 fact(s) into 'sales'.
> all_count(Cust, <COUNT:Amt>) :- sales(Cust, Amt).
Script error: Parse error: Unknown aggregate function: 
